[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ---------------- Project Configurations ----------------
[project.urls]
homepage = "https://github.com/makolon/lenewton"
repository = "https://github.com/makolon/lenewton"
documentation = "https://github.com/makolon/lenewton/readme"
issues = "https://github.com/makolon/lenewton/issues"

[project]
name = "lenewton"
version = "0.1.0"
description = "LeNewton"
readme = "README.md"
authors = [
    {name = "Makoto Sato", email = "makoto.sato@weblab.t.u-tokyo.ac.jp"},
]
requires-python = "==3.11.*"
dependencies = [
    # Image processing
    "opencv-python>=4.10.0",
    "imageio-ffmpeg==0.6.0",
    "av==15.0.0",
    # Data processing
    "matplotlib>=3.10.7",
    "pandas==2.3.1",
    "scipy==1.15.3",
    "scikit-learn>=1.7.2",
    "seaborn==0.13.2",
    # Configuration & logging
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "omegaconf==2.3.0",
    "colorlog==6.9.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "tqdm==4.67.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "graphviz>=0.21",
    "shapely>=2.0.4,<3",
    "annotated-types==0.7.0",
    "backports-strenum>=1.3.1",
    "termcolor>=3.1.0",
    # MuJoCo & physics
    "mujoco>=3.3.5",
    "gymnasium>=1.2.0",
    # JAX/Flax
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "flax==0.8.1",
    "chex==0.1.86",
    "optax==0.2.1",
    "orbax-checkpoint==0.5.3",
    "etils==1.12.2",
    # Newton simulation
    "newton",
    "mujoco-warp",
    "trimesh>=4.10.0",
    "warp-lang==1.11.0.dev20251203",
    # PyTorch
    "kmeans-pytorch>=0.3",
    "torchmetrics>=1.8.2",
    # TreeQuest
    "treequest[all]>=0.2.0",
    # TensorFlow
    "tensorflow>=2.20.0",
    "imageio>=2.37.0",
    "accelerate>=1.11.0",
    "pyglet>=2.1.11",
    # LeRobot
    "lerobot[feetech]",
    "open3d==0.18.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]


# ---------------- Tool Configurations ----------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # `zip()` without an explicit `strict=` parameter
    "SIM108", # Use ternary operator instead of if-else block
]

[tool.ruff.lint.isort]
known-first-party = ["lenewton"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp.git" }
lerobot = { git = "https://github.com/huggingface/lerobot.git" }
newton = { git = "https://github.com/newton-physics/newton.git" }
